# Reflow-Controller-SW

./: README.md
Reflow-Controller-FW/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Reflow-Controller-Firmware.ioc  Reflow-Controller-Firmware.launch  STM32L422CBTX_FLASH.ld  STM32L422CBTx_FLASH.ld
Reflow-Controller-FW/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Reflow-Controller-FW/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Reflow-Controller-FW/Debug/: Reflow-Controller-Firmware.elf  Reflow-Controller-Firmware.list  Reflow-Controller-Firmware.map  makefile  objects.list
Reflow-Controller-FW/Debug/Core/Src/: main.d  main.su  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.d  subdir.mk  system_stm32l4xx.d
Reflow-Controller-FW/Debug/Core/Startup/: startup_stm32l422cbtx.d  subdir.mk
Reflow-Controller-FW/Debug/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_i2c.d  stm32l4xx_hal_i2c_ex.d  stm32l4xx_hal_pcd.d  stm32l4xx_hal_pcd.su  stm32l4xx_hal_pcd_ex.d  stm32l4xx_hal_pcd_ex.su  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  stm32l4xx_hal_spi.d  stm32l4xx_hal_spi_ex.d  stm32l4xx_hal_tim.d  stm32l4xx_hal_tim_ex.d  stm32l4xx_ll_usb.d  stm32l4xx_ll_usb.su  subdir.mk
Reflow-Controller-FW/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk  (+1 more)
Reflow-Controller-FW/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk  usbd_core.d  usbd_ctlreq.d  usbd_ioreq.d
Reflow-Controller-FW/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_cdc_if.d  usbd_cdc_if.su  usbd_desc.d
Reflow-Controller-FW/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
Reflow-Controller-FW/cmake/: gcc-arm-none-eabi.cmake
Reflow-Controller-FW/cmake/stm32cubemx/: CMakeLists.txt
Reflow-Controller-FW/src/: hw_usb.c  hw_usb.h  io_buzzer.c  io_buzzer.h  io_status_led.c  io_status_led.h  io_tempsns.c  io_tempsns.h  tasks.c  tasks.h
(+4 files in other folders)
